Added web NFC support Added HMAC appending logic for backup in case the ingest failes. Fixed some Judge rules
